trying to fix sizing on mobile

--- a/src/pages/Home/Style.scss
+++ b/src/pages/Home/Style.scss
@@ -54,7 +54,7 @@
     }
 
     .image-section {
-      height: 40vh;
+      height: 100vh;
       order: -1;
     }
   }
